--- a/src/assets/main.less
+++ b/src/assets/main.less
@@ -136,7 +136,6 @@ input[type=text] {
 	text-overflow: ellipsis;
 	overflow: hidden;
 	white-space: nowrap;
-	transition: all .25s;
 }
 
 input[type=text]:focus {
@@ -168,10 +167,6 @@ select {
 	text-overflow: ellipsis;
 	cursor: pointer;
 	text-transform: capitalize;
-}
-
-select:hover {
-	background-image: url("@{dir-images}/bg_dropdown_right_over.gif");
 }
 
 .iconButton {
@@ -227,7 +222,6 @@ button {
 	text-overflow: ellipsis;
 	overflow: hidden;
 	margin: 0px 15px 15px 0px;
-	transition: all .25s;
 }
 
 button:hover {
@@ -252,6 +246,11 @@ button:active {
 	overflow: hidden;
 	width: 100%;
 	height: 100%;
+	transition: none;
+	
+	* {
+		transition: none;
+	}
 }
 
 #footer 
@@ -371,6 +370,42 @@ button:active {
 
 #languageOverlay.showing {
 	margin: -40px 0px 0px -235px;
+}
+
+#sportOverlay
+{
+	width: 635px;
+	height: 100px;
+	border-radius: 25px;
+	padding: 8px 15px;
+	
+	.sportIcon 
+	{
+		float: left;
+		width: 75px;
+		height: 75px;
+		border-radius: 10px;
+		padding: 5px;
+		margin-right: 10px;
+		overflow: hidden;
+		cursor: pointer;
+		
+		img {
+			height: 100%;
+		}
+	}
+	
+	.sportIcon:hover {
+		background-color: @color-white;
+	}
+	
+	.sportIcon.selected {
+		background-color: @color-medium-gray;
+	}
+}
+
+#sportOverlay.showing {
+	margin: -50px 0px 0px -317px;
 }
 
 @media (max-width: @size-tablet) {
