--- a/src/assets/main.less
+++ b/src/assets/main.less
@@ -169,6 +169,10 @@ select {
 	text-transform: capitalize;
 }
 
+select:hover {
+	background-image: url("@{dir-images}/bg_dropdown_right_over.gif");
+}
+
 .iconButton {
 	position: relative;
 	overflow: hidden;
@@ -177,18 +181,22 @@ select {
 	background-color: @color-light-gray;
 	border: 5px solid @color-medium-gray;
 	background-repeat: no-repeat;
-	background-size: contain;
+	background-size: 30px;
 	background-position: center center;
 	padding: 0px;
 	float: left;
 	border-radius: 10px;
 	margin: 0px;
+	color: @color-black;
+	font-weight: 600;
 }
 
 .iconButton:hover {
 	background-color: @color-medium-gray;
 	border: 5px solid @color-light-gray;
-	background-size: contain;
+	background-repeat: no-repeat;
+	background-size: 30px;
+	background-position: center center;
 }
 
 .iconButton.gray {
@@ -203,6 +211,14 @@ select {
 
 .iconButton.check {
 	background-image: url("@{dir-images}/icon_check_green.png");
+}
+
+.iconButton.new {
+	background-image: url("@{dir-images}/icon_new.png");
+}
+
+.iconButton.info {
+	background-image: url("@{dir-images}/icon_info.png");
 }
 
 .wrapper {
@@ -288,6 +304,31 @@ button:active {
 	iframe {
 		float: right;
 		margin-top: 3px;
+	}
+}
+
+#foreground 
+{
+	position: absolute;
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+	left: 0px;
+	top: 0px;
+	pointer-events: none;
+	
+	#filterButtons 
+	{
+		position: absolute;
+		overflow: hidden;
+		bottom: 70px; 
+		right: 15px;
+		pointer-events: all;
+		
+		.iconButton {
+			margin-right: 10px;
+			font-size: 16px;
+		}
 	}
 }
 
