--- a/src/assets/main.less
+++ b/src/assets/main.less
@@ -330,16 +330,26 @@ button:active {
 			font-size: 16px;
 		}
 	}
+	
+	#filtersSpinner {
+		float: left;
+		width: 40px;
+		height: 40px;
+		margin: 6px 15px 0px 0px;
+		background-size: 30px;
+		background-color: rgba(255,255,255,0.85);
+		border-radius: 10px;
+	}
 }
 
-#spinner 
+.spinner 
 {
-	position: absolute;
+	position: relative;
 	overflow: hidden;
 	left: 0px;
 	top: 0px;
-	width: 16px;
-	height: 16px;
+	width: 32px;
+	height: 32px;
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-image: url("@{dir-images}/ajax-loader.gif");
@@ -426,7 +436,7 @@ button:active {
 		width: 75px;
 		height: 75px;
 		border-radius: 10px;
-		padding: 5px;
+		padding: 10px;
 		margin-right: 10px;
 		overflow: hidden;
 		cursor: pointer;
