--- a/src/templates/filter_buttons.handlebars
+++ b/src/templates/filter_buttons.handlebars
@@ -1,3 +1,4 @@
+<div id="filtersSpinner" class="spinner"></div>
 <button id="sportBtn" class="iconButton" style="background-image: url('assets/images/icon_basketball.png');"></button>
 <button id="languageBtn" class="iconButton">en</button>
 <button id="newBtn" class="iconButton new"></button>
