--- a/src/assets/main.less
+++ b/src/assets/main.less
@@ -76,7 +76,7 @@ textarea {
 @color-gray: #aaaaaa;
 @color-blue: #00a8d7;
 @color-dark-blue: #0067b7;
-@color-green: #56a41c;
+@color-green: #a8d46e;
 @color-dark-green: #00953b;
 @color-orange: #ff7900;
 @color-dark-orange: #cd5b13;
@@ -489,7 +489,7 @@ button:active {
 	
 	#logo {
 		width: 100%;
-		margin: 0px 0px 25px 0px;
+		margin: 0px 0px 15px 0px;
 	}
 	
 	#content {
@@ -502,6 +502,107 @@ button:active {
 
 #infoOverlay.showing {
 	margin: -250px 0px 0px -175px;
+}
+
+#eventOverlay
+{
+	width: 350px;
+	height: 450px;
+	border-radius: 25px;
+	padding: 25px;
+	background-color: rgba(246, 246, 246, 0.95);
+	
+	.spinner {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		left: 0px;
+		top: 0px;
+	}
+	
+	#title {
+		font-size: 20px;
+		line-height: 24px;
+		border-bottom: 3px solid @color-medium-gray;
+		padding-bottom: 15px;
+		margin-bottom: 15px;
+		font-weight: 600;
+		height: 70px;
+		text-transform: capitalize;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		cursor: help;
+	}
+	
+	#content {
+		width: 100%;
+		height: 245px;
+		margin-bottom: 15px;
+		overflow: auto;
+	}
+	
+	.iconRow {
+		padding-left: 25px;
+		margin-bottom: 15px;
+		font-size: 16px;
+		line-height: 20px;
+		min-height: 25px;
+		background-repeat: no-repeat;
+	}
+	
+	.iconRow#address {
+		background-image: url("@{dir-images}/icon_address.png");
+		background-position: 1px 0px;
+	}
+	
+	.iconRow#description {
+		background-image: url("@{dir-images}/icon_description.png");
+	}
+	
+	.iconRow#phone {
+		background-image: url("@{dir-images}/icon_phone.png");
+		background-position: 2px 0px;
+	}
+	
+	.iconRow#schedule {
+		background-image: url("@{dir-images}/icon_calendar.png");
+		background-position: 0px 2px;
+	}
+	
+	.iconRow#cost {
+		background-image: url("@{dir-images}/icon_cost.png");
+	}
+	
+	#signupBtn {
+		font-size: 28px;
+		background-color: @color-green;
+		position: absolute;
+		bottom: 0px;
+		left: 20px;
+		width: 300px;
+	}
+	
+	#signupBtn:hover {
+		background-color: @color-blue;
+	}
+}
+
+#newEventOverlay 
+{
+	width: 350px;
+	height: 200px;
+	border-radius: 25px;
+	padding: 25px;
+	background-color: rgba(246, 246, 246, 0.95);
+	
+	#content {
+		font-size: 14px;
+		line-height: 22px;
+	}
+}
+
+#newEventOverlay.showing {
+	margin: -100px 0px 0px -175px;
 }
 
 @media (max-width: @size-tablet) {
