--- a/src/libs/cftoaster/jquery.cftoaster.1.0.0.css
+++ b/src/libs/cftoaster/jquery.cftoaster.1.0.0.css
@@ -15,9 +15,9 @@
 	border-radius: 2px;
 	filter:alpha(opacity=95);
 	opacity:0.95;
-	-moz-box-shadow: 0px 0px 10px #1a1a1a;
-	-webkit-box-shadow: 0px 0px 10px #1a1a1a;
-	box-shadow: 0px 0px 10px #1a1a1a;
+	-moz-box-shadow: 0px 0px 10px #777;
+	-webkit-box-shadow: 0px 0px 10px #777;
+	box-shadow: 0px 0px 10px #777;
 }
 
 .cf_toaster .content {
@@ -25,9 +25,9 @@
 	overflow: hidden;
 	z-index: 1;
 	text-align: center;
-	font-size: 15px;
+	font-size: 18px;
 	font-weight: normal;
-	line-height: 20px;
+	line-height: 22px;
 	padding: 10px;
 	text-shadow: none;
 }
